# gpuTE

./: CMakeLists.txt
include/: bookwindow.h  bookwrapper.h  initdb.h
res/: books.qrc
src/: bookwindow.cpp  bookwrapper.cpp  main.cpp
